`Bugfix`: Fix email template editor placeholder position and align page header (#2413)

--- a/src/main/webapp/app/usermanagement/research-group/research-group-template-edit/research-group-template-edit.scss
+++ b/src/main/webapp/app/usermanagement/research-group/research-group-template-edit/research-group-template-edit.scss
@@ -165,10 +165,5 @@
   .ql-container {
     border-top: none;
     border-radius: 0 0 0.5rem 0.5rem;
-
-    .ql-editor {
-      font-size: 1rem;
-      line-height: 1.8rem;
-    }
   }
 }
